// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Square component correctly, with showImage prop equal to false 1`] = `
<button
  data-test="Square Component"
  onClick={[Function]}
/>
`;

exports[`should render Square component correctly, with showImage prop equal to true 1`] = `
<button
  data-test="Square Component"
  onClick={[Function]}
>
  <img
    alt=""
  />
</button>
`;
